--- a/benchmarks/dna_visualization/.multi-x-serverless/config.yml
+++ b/benchmarks/dna_visualization/.multi-x-serverless/config.yml
@@ -1,38 +1,25 @@
 workflow_name: "dna_visualization"
 workflow_version: "0.0.1"
-environment_variables:
-  - key: "ENV_VAR_1"
-    value: "value_1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-east-1"
+  region: "us-west-1"
 estimated_invocations_per_month: 1000000
 constraints:
-  hard_resource_constraints: # None for none
-    cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
-      value: 100
-    runtime:
-      type: "absolute"
-      value: 100
-    carbon:
-      type: "absolute"
-      value: 100
-  soft_resource_constraints: # None for none
+  hard_resource_constraints:
+    cost: null
+    runtime: null
+    carbon: null
+  soft_resource_constraints:
     cost: null
     runtime: null
     carbon: null
   priority_order:
+    - carbon
     - cost
     - runtime
-    - carbon
-regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+regions_and_providers:
   allowed_regions:
-    - provider: "aws"
-      region: "us-east-1"
-    - provider: "aws"
-      region: "us-east-2"
     - provider: "aws"
       region: "us-west-1"
     - provider: "aws"
