--- a/benchmarks/dna_visualization/.multi-x-serverless/config.yml
+++ b/benchmarks/dna_visualization/.multi-x-serverless/config.yml
@@ -1,9 +1,9 @@
 workflow_name: "dna_visualization"
-workflow_version: "0.0.2"
+workflow_version: "0.0.1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-east-1"
+  region: "us-west-1"
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
@@ -20,8 +20,6 @@ constraints:
     - runtime
 regions_and_providers:
   allowed_regions:
-    - provider: "aws"
-      region: "us-east-1"
     - provider: "aws"
       region: "us-west-1"
     - provider: "aws"
