--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/get_input.py/configs/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/get_input.py/configs/config.yml
@@ -1,4 +1,5 @@
 function_name: "wo-dna_vis-ed-direct_sns-get_input"
+sns_topic_name: "sns_topic-wo-dna_vis-ed-direct_sns-get_input"
 iam_policy_file: "iam_policy.json"
 handler: "app.get_input"
 configs:
