--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/visualize.py/configs/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/visualize.py/configs/config.yml
@@ -1,4 +1,5 @@
 function_name: "wo-dna_vis-ed-direct_sns-visualize"
+sns_topic_name: "sns_topic-wo-dna_vis-ed-direct_sns-visualize"
 iam_policy_file: "iam_policy.json"
 handler: "app.visualize"
 configs:
