--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
@@ -1,9 +1,9 @@
-workflow_name: "dna_visualization"
+workflow_name: "wo-dna_vis-ed-multi-x"
 workflow_version: "0.0.1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-west-2"
+  region: "us-east-2"
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
@@ -21,7 +21,7 @@ constraints:
 regions_and_providers:
   allowed_regions:
     - provider: "aws"
-      region: "us-west-2"
+      region: "us-east-2"
   disallowed_regions:
   providers:
     aws:
