completed direct_call lamda only deployment utility

--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_only_sns/config.yml
@@ -1,2 +1,3 @@
 type: "boto3_sns"
-starting_sns_topic_name: "sns_topic-wo-dna_vis-ed-direct_sns-get_input"
+workload_name: "workflow-wo-dna_vis-ed-direct_sns"
+starting_function_name: "wo-dna_vis-ed-direct_sns-get_input"
