--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/aws_step_function/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/aws_step_function/config.yml
@@ -1,2 +1,3 @@
 type: "aws_step_function"
+workload_name: "wo-dna_vis-ed-step_function"
 state_machine_name: "state_machine-wo-dna_vis-ed-step_function"
