--- a/benchmarks/dna_visualization/.multi-x-serverless/config.yml
+++ b/benchmarks/dna_visualization/.multi-x-serverless/config.yml
@@ -3,7 +3,7 @@ workflow_version: "0.0.1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-west-1"
+  region: "us-east-1"
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
@@ -20,6 +20,10 @@ constraints:
     - runtime
 regions_and_providers:
   allowed_regions:
+    - provider: "aws"
+      region: "us-east-1"
+    - provider: "aws"
+      region: "us-east-2"
     - provider: "aws"
       region: "us-west-1"
     - provider: "aws"
