implemented multi x into both run and deploy

--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
@@ -1,5 +1,5 @@
-workflow_name: "wo-dna_vis-ed-multi-x"
-workflow_version: "0.0.1"
+workflow_name: "wo-dna_vis-ed-multi_x"
+workflow_version: "0.0.2"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
