--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_direct/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_direct/config.yml
@@ -1,3 +1,3 @@
 type: "boto3_direct"
-workload_name: "workflow-wo-dna_vis-ed-direct"
+workload_name: "wo-dna_vis-ed-direct"
 starting_function_name: "wo-dna_vis-ed-direct-get_input"
