--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_sns/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/boto3_sns/config.yml
@@ -1,3 +1,3 @@
 type: "boto3_sns"
-workload_name: "workflow-wo-dna_vis-ed-direct_sns"
-starting_function_name: "wo-dna_vis-ed-direct_sns-get_input"
+workload_name: "wo-dna_vis-ed-sns"
+starting_function_name: "wo-dna_vis-ed-sns-get_input"
