--- a/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/dna_visualization/external_database/multi_x/.multi-x-serverless/config.yml
@@ -1,9 +1,9 @@
 workflow_name: "wo-dna_vis-ed-multi_x"
-workflow_version: "0.0.2"
+workflow_version: "0.0.3"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-east-2"
+  region: 'ca-west-1'
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
@@ -21,7 +21,7 @@ constraints:
 regions_and_providers:
   allowed_regions:
     - provider: "aws"
-      region: "us-east-2"
+      region: 'ca-west-1'
   disallowed_regions:
   providers:
     aws:
