--- a/benchmarks/image_processing/.caribou/config.yml
+++ b/benchmarks/image_processing/.caribou/config.yml
@@ -23,6 +23,8 @@ regions_and_providers:
     - provider: "aws"
       region: "us-east-1"
     - provider: "aws"
+      region: "us-east-2"
+    - provider: "aws"
       region: "us-west-1"
     - provider: "aws"
       region: "us-west-2"
