Implemented compression on log sync and workflow management, some wip and temp debug changes for remote cli invoke and tests.

--- a/benchmarks/dna_visualization/.caribou/config.yml
+++ b/benchmarks/dna_visualization/.caribou/config.yml
@@ -22,10 +22,10 @@ regions_and_providers:
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-    - provider: "aws"
-      region: "us-west-1"
-    - provider: "aws"
-      region: "us-west-2"
+    # - provider: "aws"
+    #   region: "us-west-1"
+    # - provider: "aws"
+    #   region: "us-west-2"
     - provider: "aws"
       region: "ca-central-1"
   disallowed_regions:
