--- a/benchmarks/image_processing/.caribou/config.yml
+++ b/benchmarks/image_processing/.caribou/config.yml
@@ -22,10 +22,10 @@ regions_and_providers:
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-    - provider: "aws"
-      region: "us-west-1"
-    - provider: "aws"
-      region: "us-west-2"
+    # - provider: "aws"
+    #   region: "us-west-1"
+    # - provider: "aws"
+    #   region: "us-west-2"
     - provider: "aws"
       region: "ca-central-1"
   disallowed_regions:
